# TREVORProxy_serverless

./: .gitignore  AGENTS.md  README.md  pyproject.toml  tps-least-privilege-policy.json
infra/: variables.tf
src/trevorproxy_serverless/: cli.py  infra_manager.py
src/trevorproxy_serverless/data/: tps-least-privilege-policy.json
src/trevorproxy_serverless/infra/: .terraform.lock.hcl
trevorproxy_serverless/: cli.py  infra_manager.py
